# hackingpal

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.linux  config.json  conftest.py  main.py  network-tools-backend.spec  pyproject.toml  requirements-bundle.txt
backend/lib/: ad_auth.py  audit.py  audit_log.py  auth.py  coverage.py  cvss.py  engagements.py  errors.py  exploitdb.py  forensics.py  hids_notify.py  ids.py  ip_intel.py  labs.py  lan.py  logging_setup.py  mode.py  nmap_runner.py  nmap_scripts.py  platform_util.py  preset_engine.py  report.py  scanner.py  scope.py  suggested_checks.py  target_policy.py  targets.py  tool_requirements.py  validators.py  web_fuzz.py
backend/presets/: active_directory_kill_chain.mhp  ad_exposure_mapper.mhp  api_authorization_tester.mhp  attack_path_composer.mhp  auth_session_tester.mhp  baseline_home_app.mhp  bug_bounty_stealth.mhp  cloud_aws_assessment.mhp  cloud_exposure_auditor.mhp  compromise_assessment.mhp  container_kubernetes_escape.mhp  full_external_red_team.mhp  full_internal_network.mhp  local_posture_linux.mhp  local_posture_macos.mhp  passive_recon_domain.mhp  phishing_campaign_recon.mhp  quick_win.mhp  surface_inventory.mhp  web_app_first_look.mhp  web_app_full_assessment.mhp  web_attack_chain.mhp  wifi_physical_assessment.mhp
backend/prompts/: assistant.md  playbook_suggest.md  report_rollup.md  summarize_tool.md  triage.md
backend/routers/: ad_spray.py  audit.py  audit_log.py  aws_recon.py  (+84 more)
(+269 files in other folders)
