[project]
name = "network-tools-backend"
version = "0.2.0"
description = "FastAPI backend for the Network Tools desktop app."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "Pillow>=10",
    "cryptography>=42",
    "python-multipart>=0.0.9",
    "anthropic>=0.92",
    # PDF report exporter (engagement deliverable)
    "reportlab>=4.0",
    # Cloud recon SDKs — adds ~50MB to the PyInstaller bundle
    "boto3>=1.34",
    "azure-identity>=1.15",
    "azure-mgmt-resource>=23",
    "azure-mgmt-resource-subscriptions>=1",
    "azure-mgmt-storage>=21",
    "azure-mgmt-compute>=30",
    "azure-mgmt-network>=25",
    "azure-mgmt-keyvault>=10",
    "google-cloud-resource-manager>=1.12",
    "google-cloud-storage>=2.14",
    "google-cloud-compute>=1.16",
    # Active Directory tooling
    "ldap3>=2.9",
    "impacket>=0.12",
    "bloodhound>=1.7",
    # Wireless (macOS PyObjC bindings)
    "pyobjc-framework-CoreWLAN>=10",
    "pyobjc-framework-CoreBluetooth>=10",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
